tooling/nargo_cli/tests/snapshots/execution_success/single_verify_proof/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(
    verification_key: [Field; 114],
    proof: [Field; 93],
    public_inputs: pub [Field; 1],
    key_hash: Field,
) {
    std::verify_proof(verification_key, proof, public_inputs, key_hash);
}
