tooling/nargo_cli/tests/snapshots/execution_success/single_verify_proof/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "verification_key",
        "type": {
          "kind": "array",
          "length": 114,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "proof",
        "type": {
          "kind": "array",
          "length": 93,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "public_inputs",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "public"
      },
      {
        "name": "key_hash",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 208",
    "private parameters indices : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 208]",
    "public parameters indices : [207]",
    "return value indices : []",
    "BLACKBOX::RECURSIVE_AGGREGATION [(_0, 254), (_1, 254), (_2, 254), (_3, 254), (_4, 254), (_5, 254), (_6, 254), (_7, 254), (_8, 254), (_9, 254), (_10, 254), (_11, 254), (_12, 254), (_13, 254), (_14, 254), (_15, 254), (_16, 254), (_17, 254), (_18, 254), (_19, 254), (_20, 254), (_21, 254), (_22, 254), (_23, 254), (_24, 254), (_25, 254), (_26, 254), (_27, 254), (_28, 254), (_29, 254), (_30, 254), (_31, 254), (_32, 254), (_33, 254), (_34, 254), (_35, 254), (_36, 254), (_37, 254), (_38, 254), (_39, 254), (_40, 254), (_41, 254), (_42, 254), (_43, 254), (_44, 254), (_45, 254), (_46, 254), (_47, 254), (_48, 254), (_49, 254), (_50, 254), (_51, 254), (_52, 254), (_53, 254), (_54, 254), (_55, 254), (_56, 254), (_57, 254), (_58, 254), (_59, 254), (_60, 254), (_61, 254), (_62, 254), (_63, 254), (_64, 254), (_65, 254), (_66, 254), (_67, 254), (_68, 254), (_69, 254), (_70, 254), (_71, 254), (_72, 254), (_73, 254), (_74, 254), (_75, 254), (_76, 254), (_77, 254), (_78, 254), (_79, 254), (_80, 254), (_81, 254), (_82, 254), (_83, 254), (_84, 254), (_85, 254), (_86, 254), (_87, 254), (_88, 254), (_89, 254), (_90, 254), (_91, 254), (_92, 254), (_93, 254), (_94, 254), (_95, 254), (_96, 254), (_97, 254), (_98, 254), (_99, 254), (_100, 254), (_101, 254), (_102, 254), (_103, 254), (_104, 254), (_105, 254), (_106, 254), (_107, 254), (_108, 254), (_109, 254), (_110, 254), (_111, 254), (_112, 254), (_113, 254), (_114, 254), (_115, 254), (_116, 254), (_117, 254), (_118, 254), (_119, 254), (_120, 254), (_121, 254), (_122, 254), (_123, 254), (_124, 254), (_125, 254), (_126, 254), (_127, 254), (_128, 254), (_129, 254), (_130, 254), (_131, 254), (_132, 254), (_133, 254), (_134, 254), (_135, 254), (_136, 254), (_137, 254), (_138, 254), (_139, 254), (_140, 254), (_141, 254), (_142, 254), (_143, 254), (_144, 254), (_145, 254), (_146, 254), (_147, 254), (_148, 254), (_149, 254), (_150, 254), (_151, 254), (_152, 254), (_153, 254), (_154, 254), (_155, 254), (_156, 254), (_157, 254), (_158, 254), (_159, 254), (_160, 254), (_161, 254), (_162, 254), (_163, 254), (_164, 254), (_165, 254), (_166, 254), (_167, 254), (_168, 254), (_169, 254), (_170, 254), (_171, 254), (_172, 254), (_173, 254), (_174, 254), (_175, 254), (_176, 254), (_177, 254), (_178, 254), (_179, 254), (_180, 254), (_181, 254), (_182, 254), (_183, 254), (_184, 254), (_185, 254), (_186, 254), (_187, 254), (_188, 254), (_189, 254), (_190, 254), (_191, 254), (_192, 254), (_193, 254), (_194, 254), (_195, 254), (_196, 254), (_197, 254), (_198, 254), (_199, 254), (_200, 254), (_201, 254), (_202, 254), (_203, 254), (_204, 254), (_205, 254), (_206, 254), (_207, 254), (_208, 254)] []"
  ],
  "debug_symbols": "ZY3bCsMgEET/ZZ/zoKYpJb9SSvAaBFHxUijiv3cTkhLo25yZ2dkGSou6LtabkGF+NnBB8mKDR2pAditH7jfKhacC80RvA2ivUD1oH8BYp1GTPvxVKZvuR5eOI/mVGesvBJGsc3Zdrj/RfvNkuXD6QFO9vKTlE8/kvI8pSK1q0tvSnuH8Fw==",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_add(y)\")]\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_sub(y)\")]\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_mul(y)\")]\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::ops::arith::WrappingMul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test]\n    fn test_wrapping_mul() {\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, zero.wrapping_mul(one));\n\n        // 0*1==0\n        assert_eq(zero, one.wrapping_mul(zero));\n\n        // 1*1==1\n        assert_eq(one, one.wrapping_mul(one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, zero.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, two_pow_64.wrapping_mul(zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, two_pow_64.wrapping_mul(one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, one.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, two_pow_64.wrapping_mul(two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, u128_max.wrapping_mul(u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "// This circuit aggregates one proof from `assert_statement`.\nfn main(\n    verification_key: [Field; 114],\n    // This is the proof without public inputs attached.\n    //\n    // This means: the size of this does not change with the number of public inputs.\n    proof: [Field; 93],\n    public_inputs: pub [Field; 1],\n    // This is currently not public. It is fine given that the vk is a part of the circuit definition.\n    // I believe we want to eventually make it public too though.\n    key_hash: Field,\n) {\n    std::verify_proof(verification_key, proof, public_inputs, key_hash);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
